@@ -58,6 +58,6 @@ public class UserRepository implements BaseRepository{
             u.setIdentifierDocument(rs.getString("identifier_document"));
             return u;
         }, email);
-        return result.isEmpty() ? null : result.get(0);
+        return result.isEmpty() ? null : result.getFirst();
     }
 }
